# NewFFmpeg

./: android_build.sh  android_build64.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/jin/newffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/cn/jin/newffmpeg/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/jin/newffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
